--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ethernet-interfaces.j2
@@ -778,7 +778,11 @@ interface {{ ethernet_interface.name }}
    vmtracer vmware-esx
 {%     endif %}
 {%     if ethernet_interface.transceiver.frequency is arista.avd.defined %}
-   transceiver frequency {{ ethernet_interface.transceiver.frequency }} ghz
+{%         set frequency_cli = 'transceiver frequency ' ~ "%.3f" | format(ethernet_interface.transceiver.frequency | float) %}
+{%         if ethernet_interface.transceiver.frequency_unit is arista.avd.defined %}
+{%             set frequency_cli = frequency_cli ~ ' ' ~ ethernet_interface.transceiver.frequency_unit %}
+{%         endif %}
+   {{ frequency_cli }}
 {%     endif %}
 {%     if ethernet_interface.transceiver.media.override is arista.avd.defined %}
    transceiver media override {{ ethernet_interface.transceiver.media.override }}
