--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
@@ -139,17 +139,19 @@
 | Secret Name | Receive Lifetime | Transmit Lifetime |
 | ----------- | ---------------- | ----------------- |
 {%             for secret in profile.secrets | arista.avd.natural_sort("name") %}
-{%                 if secret.receive_lifetime.infinite is arista.avd.defined(true) %}
-{%                     set receive_lifetime = "Infinite"  %}
-{%                 elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined %}
-{%                     set receive_lifetime = secret.receive_lifetime.start_date_time ~ " - " ~ secret.receive_lifetime.end_date_time %}
+{%                 if secret.secret is arista.avd.defined and secret.name is arista.avd.defined and (secret.receive_lifetime.infinite is arista.avd.defined or (secret.receive_lifetime.start_date_time and secret.receive_lifetime.end_date_time is arista.avd.defined)) and (secret.transmit_lifetime.infinite is arista.avd.defined or (secret.transmit_lifetime.start_date_time and secret.transmit_lifetime.end_date_time is arista.avd.defined)) %}
+{%                     if secret.receive_lifetime.infinite is arista.avd.defined(true) %}
+{%                         set receive_lifetime = "Infinite"  %}
+{%                     elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined %}
+{%                         set receive_lifetime = secret.receive_lifetime.start_date_time ~ " - " ~ secret.receive_lifetime.end_date_time %}
+{%                     endif %}
+{%                     if secret.transmit_lifetime.infinite is arista.avd.defined(true) %}
+{%                         set transmit_lifetime = "Infinite" %}
+{%                     elif secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
+{%                         set transmit_lifetime = secret.transmit_lifetime.start_date_time ~ " - " ~ secret.transmit_lifetime.end_date_time %}
+{%                     endif %}
+| {{ secret.name }} | {{ receive_lifetime | arista.avd.default("-") }} | {{ transmit_lifetime | arista.avd.default("-") }} |
 {%                 endif %}
-{%                 if secret.transmit_lifetime.infinite is arista.avd.defined(true) %}
-{%                     set transmit_lifetime = "Infinite" %}
-{%                 elif secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
-{%                     set transmit_lifetime = secret.transmit_lifetime.start_date_time ~ " - " ~ secret.transmit_lifetime.end_date_time %}
-{%                 endif %}
-| {{ secret.name }} | {{ receive_lifetime }} | {{ transmit_lifetime }} |
 {%             endfor %}
 {%         endfor %}
 {%     endif %}
