--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
@@ -139,7 +139,7 @@
 | Secret Name | Receive Lifetime | Transmit Lifetime |
 | ----------- | ---------------- | ----------------- |
 {%             for secret in profile.secrets | arista.avd.natural_sort("name") %}
-{%                 if secret.secret is arista.avd.defined and secret.name is arista.avd.defined and (secret.receive_lifetime.infinite is arista.avd.defined or (secret.receive_lifetime.start_date_time and secret.receive_lifetime.end_date_time is arista.avd.defined)) and (secret.transmit_lifetime.infinite is arista.avd.defined or (secret.transmit_lifetime.start_date_time and secret.transmit_lifetime.end_date_time is arista.avd.defined)) %}
+{%                 if secret.secret is arista.avd.defined and (secret.receive_lifetime.infinite is arista.avd.defined or (secret.receive_lifetime.start_date_time and secret.receive_lifetime.end_date_time is arista.avd.defined)) and (secret.transmit_lifetime.infinite is arista.avd.defined or (secret.transmit_lifetime.start_date_time and secret.transmit_lifetime.end_date_time is arista.avd.defined)) %}
 {%                     if secret.receive_lifetime.infinite is arista.avd.defined(true) %}
 {%                         set receive_lifetime = "Infinite"  %}
 {%                     elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined %}
