--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -543,11 +543,11 @@ ASN Notation: {{ router_bgp.as_notation | arista.avd.default('asplain') }}
 {%             endfor %}
 {%         endif %}
 {%         if router_bgp.address_family_evpn.layer_2_fec_in_place_update.enabled is arista.avd.defined(true) %}
-{%             set layer2_update = "- Layer-2 In-place FEC update operation enabled" %}
 {%             if router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout is arista.avd.defined %}
-{%                 set layer2_update = "- Layer-2 In-place FEC update tracking timeout: " ~ router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout ~ " seconds" %}
+- Layer-2 In-place FEC update tracking timeout: {{ router_bgp.address_family_evpn.layer_2_fec_in_place_update.timeout }} seconds
+{%             else %}
+- Layer-2 In-place FEC update operation enabled
 {%             endif %}
-{{ layer2_update }}
 {%         endif %}
 {%         if router_bgp.address_family_evpn.peer_groups is arista.avd.defined %}
 
