Feat(eos_cli_config_gen)-add_transceiver_frequency_knob

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
@@ -179,7 +179,7 @@
 | Interface | Transceiver Frequency | Media Override |
 | --------- | --------------------- | -------------- |
 {%         for transceiver_setting in transceiver_settings | arista.avd.natural_sort('name') %}
-{%             set interface = transceiver_setting.name | arista.avd.default('-') %}
+{%             set interface = transceiver_setting.name %}
 {%             if transceiver_setting.transceiver.frequency is arista.avd.defined %}
 {%                 set frequency = "%.3f" | format(transceiver_setting.transceiver.frequency | float) %}
 {%                 if transceiver_setting.transceiver.frequency_unit is arista.avd.defined %}
