--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
@@ -15,8 +15,10 @@ monitor telemetry postcard policy
 {%     elif monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask is arista.avd.defined %}
    ingress sample tcp-udp-checksum value {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value }} mask {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask }}
 {%     endif %}
-{%     if monitor_telemetry_postcard_policy.vxlan_marking_bit is arista.avd.defined %}
-   marker vxlan header word 0 bit {{ monitor_telemetry_postcard_policy.vxlan_marking_bit | arista.avd.default(0) }}
+{%     if monitor_telemetry_postcard_policy.marker_vxlan is arista.avd.defined(true) %}
+   marker vxlan
+{%     elif monitor_telemetry_postcard_policy.vxlan_marking_bit is arista.avd.defined %}
+   marker vxlan header word 0 bit {{ monitor_telemetry_postcard_policy.vxlan_marking_bit }}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.collection.destination is arista.avd.defined %}
 {%         set ingress_cli = "ingress collection gre source " ~ monitor_telemetry_postcard_policy.ingress.collection.source ~ " destination " ~ monitor_telemetry_postcard_policy.ingress.collection.destination %}
