--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
@@ -165,6 +165,33 @@
 {%             endif %}
 {%         endfor %}
 {%     endif %}
+{# Transceiver Settings #}
+{%     set transceiver_settings = [] %}
+{%     for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
+{%         if ethernet_interface.transceiver is arista.avd.defined %}
+{%             do transceiver_settings.append(ethernet_interface) %}
+{%         endif %}
+{%     endfor %}
+{%     if transceiver_settings | length > 0 %}
+
+##### Transceiver Settings
+
+| Interface | Transceiver Frequency | Media Override |
+| --------- | --------------------- | -------------- |
+{%         for transceiver_setting in transceiver_settings | arista.avd.natural_sort('name') %}
+{%             set interface = transceiver_setting.name %}
+{%             if transceiver_setting.transceiver.frequency is arista.avd.defined %}
+{%                 set frequency = "%.3f" | format(transceiver_setting.transceiver.frequency | float) %}
+{%                 if transceiver_setting.transceiver.frequency_unit is arista.avd.defined %}
+{%                     set frequency = frequency ~ ' ' ~ transceiver_setting.transceiver.frequency_unit %}
+{%                 endif %}
+{%             else %}
+{%                 set frequency = '-' %}
+{%             endif %}
+{%             set m_override = transceiver_setting.transceiver.media.override | arista.avd.default('-') %}
+| {{ interface }} | {{ frequency }} | {{ m_override }} |
+{%         endfor %}
+{%     endif %}
 {# Link Tracking Groups #}
 {%     set link_tracking_interfaces = [] %}
 {%     for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
