Updating documentation template

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/event-handlers.j2
@@ -78,8 +78,8 @@ event-handler {{ handler.name }}
 {%         if handler.action_type is arista.avd.defined("bash") and handler.action is arista.avd.defined %}
    action {{ handler.action_type }} {{ handler.action }}
 {%         endif %}
-{%         if handler.event_handler_action.bash_command is arista.avd.defined %}
-{%             set bash_command = handler.event_handler_action.bash_command%}
+{%         if handler.actions.bash_command is arista.avd.defined %}
+{%             set bash_command = handler.actions.bash_command %}
 {%             if bash_command.count('\n') > 0 %}
 {%                 if not bash_command.rstrip().endswith('\nEOF') %}
 {%                     set bash_command = bash_command.rstrip() ~ "\nEOF" %}
@@ -89,11 +89,11 @@ event-handler {{ handler.name }}
 {%             else %}
    action bash {{ bash_command }}
 {%             endif %}
-{%         elif handler.event_handler_action.log is arista.avd.defined(true) %}
+{%         elif handler.actions.log is arista.avd.defined(true) %}
    action log
 {%         endif %}
-{%         if handler.event_handler_action.increment_device_health_metric is arista.avd.defined %}
-   action increment device-health metric {{ handler.event_handler_action.increment_device_health_metric }}
+{%         if handler.actions.increment_device_health_metric is arista.avd.defined %}
+   action increment device-health metric {{ handler.actions.increment_device_health_metric }}
 {%         endif %}
 {%         if handler.delay is arista.avd.defined %}
    delay {{ handler.delay }}
