--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/management-security.j2
@@ -131,7 +131,7 @@
 {%     endif %}
 {%     if management_security.shared_secret_profiles is arista.avd.defined %}
 
-### Secret Profiles
+### Session Shared-secret Profiles
 {%         for profile in management_security.shared_secret_profiles | arista.avd.natural_sort("profile") %}
 
 #### {{ profile.profile }}
@@ -140,9 +140,9 @@
 | ----------- | ---------------- | ----------------- | -------- |
 {%             for secret in profile.secrets | arista.avd.natural_sort("name") %}
 {%                 if secret.secret is arista.avd.defined and
-                      ((secret.receive_lifetime.infinite is arista.avd.defined or
+                      ((secret.receive_lifetime.infinite is arista.avd.defined(true) or
                         (secret.receive_lifetime.start_date_time and secret.receive_lifetime.end_date_time is arista.avd.defined)) and
-                       (secret.transmit_lifetime.infinite is arista.avd.defined or
+                       (secret.transmit_lifetime.infinite is arista.avd.defined(true) or
                         (secret.transmit_lifetime.start_date_time and secret.transmit_lifetime.end_date_time is arista.avd.defined))) %}
 {%                     if secret.local_time is arista.avd.defined(true) %}
 {%                         set timezone = "Local Time" %}
@@ -151,12 +151,12 @@
 {%                     endif %}
 {%                     if secret.receive_lifetime.infinite is arista.avd.defined(true) %}
 {%                         set receive_lifetime = "Infinite" %}
-{%                     elif secret.receive_lifetime.start_date_time is arista.avd.defined and secret.receive_lifetime.end_date_time is arista.avd.defined %}
+{%                     else %}
 {%                         set receive_lifetime = secret.receive_lifetime.start_date_time ~ " - " ~ secret.receive_lifetime.end_date_time %}
 {%                     endif %}
 {%                     if secret.transmit_lifetime.infinite is arista.avd.defined(true) %}
 {%                         set transmit_lifetime = "Infinite" %}
-{%                     elif secret.transmit_lifetime.start_date_time is arista.avd.defined and secret.transmit_lifetime.end_date_time is arista.avd.defined %}
+{%                     else %}
 {%                         set transmit_lifetime = secret.transmit_lifetime.start_date_time ~ " - " ~ secret.transmit_lifetime.end_date_time %}
 {%                     endif %}
 | {{ secret.name }} | {{ receive_lifetime | arista.avd.default("-") }} | {{ transmit_lifetime | arista.avd.default("-") }} | {{ timezone }} |
