Adding direction key

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ethernet-interfaces.j2
@@ -176,8 +176,8 @@
 
 ##### TCP MSS Clamping
 
-| Interface | Ipv4 Segment Size | Ipv6 Segment Size | Egress | Ingress |
-| --------- | ----------------- | ----------------- | ------ | ------- |
+| Interface | Ipv4 Segment Size | Ipv6 Segment Size | Direction |
+| --------- | ----------------- | ----------------- | --------- |
 {%         for tcp_mss_clamping in tcp_mss_clampings | arista.avd.natural_sort('name') %}
 {%             set interface = tcp_mss_clamping.name %}
 {%             if tcp_mss_clamping.tcp_mss_ceiling.ipv4_segment_size is arista.avd.defined %}
@@ -186,12 +186,7 @@
 {%             if tcp_mss_clamping.tcp_mss_ceiling.ipv6_segment_size is arista.avd.defined %}
 {%                 set ipv6_segment_size = tcp_mss_clamping.tcp_mss_ceiling.ipv6_segment_size %}
 {%             endif %}
-{%             if tcp_mss_clamping.tcp_mss_ceiling.egress is arista.avd.defined(true) %}
-{%                 set egress = "True" %}
-{%             elif tcp_mss_clamping.tcp_mss_ceiling.ingress is arista.avd.defined(true) %}
-{%                 set ingress = "True" %}
-{%             endif %}
-| {{ interface }} | {{ ipv4_segment_size | arista.avd.default("-") }} | {{ ipv6_segment_size | arista.avd.default("-") }} | {{ egress | arista.avd.default("-") }} | {{ ingress | arista.avd.default("-") }} |
+| {{ interface }} | {{ ipv4_segment_size | arista.avd.default("-") }} | {{ ipv6_segment_size | arista.avd.default("-") }} | {{ tcp_mss_clamping.tcp_mss_ceiling.direction | arista.avd.default("-") }} |
 {%         endfor %}
 {%     endif %}
 {# Transceiver Settings #}
