--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
@@ -18,7 +18,9 @@ dot1x protocol bpdu bypass
 {%     if dot1x.dynamic_authorization is arista.avd.defined(true) %}
 dot1x dynamic-authorization
 {%     endif %}
-{%     if dot1x.mac_based_authentication is arista.avd.defined or dot1x.radius_av_pair is arista.avd.defined or dot1x.aaa.unresponsive is arista.avd.defined %}
+{%     if dot1x.mac_based_authentication is arista.avd.defined or dot1x.radius_av_pair is arista.avd.defined or 
+         dot1x.aaa.unresponsive is arista.avd.defined or dot1x.captive_portal is arista.avd.defined 
+         or dot1x.supplicant is arista.avd.defined %}
 dot1x
 {%         if dot1x.aaa.unresponsive is arista.avd.defined %}
 {%             set aaa_config = "aaa unresponsive" %}
@@ -78,6 +80,22 @@ dot1x
 {%             if dot1x.radius_av_pair.framed_mtu is arista.avd.defined %}
    radius av-pair framed-mtu {{ dot1x.radius_av_pair.framed_mtu }}
 {%             endif %}
+{%         endif %}
+{%         if dot1x.captive_portal.url is arista.avd.defined or dot1x.captive_portal.ssl_profile is arista.avd.defined %}
+{%             set captive_portal_cli = "captive-portal" %}
+{%             if dot1x.captive_portal.url is arista.avd.defined %}
+{%                 set captive_portal_cli = captive_portal_cli ~ " url " ~ dot1x.captive_portal.url %}
+{%             endif %}
+{%             if dot1x.captive_portal.ssl_profile is arista.avd.defined %}
+{%                 set captive_portal_cli = captive_portal_cli ~ " ssl profile " ~ dot1x.captive_portal.ssl_profile %}
+{%             endif %}
+   {{ captive_portal_cli }}
+{%         endif %}
+{%         if dot1x.captive_portal.access_list_ipv4 is arista.avd.defined %}
+   captive-portal access-list ipv4 {{ dot1x.captive_portal.access_list_ipv4 }}
+{%         endif %}
+{%         if dot1x.supplicant.logging is arista.avd.defined(true) %}
+   supplicant logging
 {%         endif %}
 {%     endif %}
 {% endif %}
