--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -201,6 +201,9 @@ router bgp {{ router_bgp.as }}
 {%         if peer_group.session_tracker is arista.avd.defined %}
    neighbor {{ peer_group.name }} session tracker {{ peer_group.session_tracker }}
 {%         endif %}
+{%         if peer_group.shared_secret.profile is arista.avd.defined and peer_group.shared_secret.hash_algorithm is arista.avd.defined %}
+   neighbor {{ peer_group.name }} password shared-secret profile {{ peer_group.shared_secret.profile }} algorithm {{ peer_group.shared_secret.hash_algorithm }}
+{%         endif %}
 {%         if peer_group.send_community is arista.avd.defined('all') %}
    neighbor {{ peer_group.name }} send-community
 {%         elif peer_group.send_community is arista.avd.defined %}
@@ -350,6 +353,9 @@ router bgp {{ router_bgp.as }}
 {%         endif %}
 {%         if neighbor.route_map_out is arista.avd.defined %}
    neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
+{%         endif %}
+{%         if neighbor.shared_secret.profile is arista.avd.defined and neighbor.shared_secret.hash_algorithm is arista.avd.defined %}
+   neighbor {{ neighbor.ip_address }} password shared-secret profile {{ neighbor.shared_secret.profile }} algorithm {{ neighbor.shared_secret.hash_algorithm }}
 {%         endif %}
 {%         if neighbor.default_originate.enabled is arista.avd.defined(true) %}
 {%             set default_originate_cli = "neighbor " ~ neighbor.ip_address ~ " default-originate" %}
