--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard-policy.j2
@@ -9,21 +9,25 @@
 monitor telemetry postcard policy
 {%     if monitor_telemetry_postcard_policy.disabled is arista.avd.defined(false) %}
    no disabled
+{%     elif monitor_telemetry_postcard_policy.disabled is arista.avd.defined(true) %}
+   disabled
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.ingress.sample.rate is arista.avd.defined %}
    ingress sample rate {{ monitor_telemetry_postcard_policy.ingress.sample.rate }}
 {%     elif monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask is arista.avd.defined %}
    ingress sample tcp-udp-checksum value {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.value }} mask {{ monitor_telemetry_postcard_policy.ingress.sample.tcp_udp_checksum.mask }}
 {%     endif %}
-{%     if monitor_telemetry_postcard_policy.marker_vxlan is arista.avd.defined(true) %}
+{%     if monitor_telemetry_postcard_policy.marker_vxlan.enabled is arista.avd.defined(true) %}
    marker vxlan
-{%     elif monitor_telemetry_postcard_policy.vxlan_marking_bit is arista.avd.defined %}
-   marker vxlan header word 0 bit {{ monitor_telemetry_postcard_policy.vxlan_marking_bit }}
+{%     elif monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit is arista.avd.defined %}
+   marker vxlan header word 0 bit {{ monitor_telemetry_postcard_policy.marker_vxlan.header_word_zero_bit }}
 {%     endif %}
 {%     if monitor_telemetry_postcard_policy.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard_policy.ingress.collection.destination is arista.avd.defined %}
 {%         set ingress_cli = "ingress collection gre source " ~ monitor_telemetry_postcard_policy.ingress.collection.source ~ " destination " ~ monitor_telemetry_postcard_policy.ingress.collection.destination %}
 {%         if monitor_telemetry_postcard_policy.ingress.collection.version is arista.avd.defined(2) %}
 {%             set ingress_cli = ingress_cli ~ " version 2" %}
+{%         elif monitor_telemetry_postcard_policy.ingress.collection.version is arista.avd.defined(1) %}
+{%             set ingress_cli = ingress_cli ~ " version 1" %}
 {%         endif %}
    {{ ingress_cli }}
 {%     endif %}
@@ -42,12 +46,13 @@ monitor telemetry postcard policy
 {%                 for protocol in rule.protocols | arista.avd.natural_sort('protocol') %}
 {%                     if protocol.protocol is arista.avd.defined %}
 {%                         set protocol_cli = "protocol " ~ protocol.protocol %}
-{%                         for dest_port in protocol.destination_ports | arista.avd.natural_sort %}
-         {{ protocol_cli }} destination port {{ dest_port }}
-{%                         endfor %}
-{%                         for src_port in protocol.source_ports | arista.avd.natural_sort %}
-         {{ protocol_cli }} source port {{ src_port }}
-{%                         endfor %}
+{%                         if protocol.source_ports is arista.avd.defined %}
+{%                             set protocol_cli = protocol_cli ~ " source port " ~ protocol.source_ports | join(", ") %}
+{%                         endif %}
+{%                         if protocol.destination_ports is arista.avd.defined %}
+{%                             set protocol_cli = protocol_cli ~ " destination port " ~ protocol.destination_ports | join(", ") %}
+{%                         endif %}
+         {{ protocol_cli }}
 {%                     endif %}
 {%                 endfor %}
 {%             endif %}
