Enhacing eos template.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-telemetry-postcard-policy.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-telemetry-postcard-policy.j2
@@ -57,7 +57,7 @@
 {%         endfor %}
 {%     endif %}
 
-#### Monitor Telemetry Postcard Configuration
+#### Monitor Telemetry Postcard Policy Configuration
 
 ```eos
 {%     include 'eos/monitor-telemetry-postcard-policy.j2' %}
