--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/mac-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/mac-security.j2
@@ -34,6 +34,13 @@ mac security
 {%         if profile.mka.session.rekey_period is arista.avd.defined %}
       mka session rekey-period {{ profile.mka.session.rekey_period }}
 {%         endif %}
+{%         if profile.traffic_unprotected.allow.enabled is arista.avd.defined(true) %}
+{%             set traffic_unprotected_cli = "traffic unprotected allow" %}
+{%             if profile.traffic_unprotected.allow.active_sak is arista.avd.defined(true) %}
+{%                 set traffic_unprotected_cli = traffic_unprotected_cli ~ " active-sak" %}
+{%             endif %}
+      {{ traffic_unprotected_cli }}
+{%         endif %}
 {%         if profile.sci is arista.avd.defined(true) %}
       sci
 {%         endif %}
