--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/dot1x.j2
@@ -71,7 +71,7 @@
 | Logging | True |
 {%             endif %}
 {%             if dot1x.supplicant.disconnect_cached_results_timeout is arista.avd.defined %}
-| Disconnect cached_results timeout | {{ dot1x.supplicant.disconnect_cached_results_timeout }} seconds |
+| Disconnect cached-results timeout | {{ dot1x.supplicant.disconnect_cached_results_timeout }} seconds |
 {%             endif %}
 {%             if dot1x.supplicant.profiles is arista.avd.defined %}
 
