Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/mac-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/mac-security.j2
@@ -28,7 +28,7 @@ FIPS restrictions enabled.
 
 ###### Settings
 
-| Cipher | Key-Server Priority | Rekey-Period | SCI | Traffic Unprotected |
+| Cipher | Key-Server Priority | Rekey-Period | SCI | Traffic Unprotected Fallback |
 | ------ | ------------------- | ------------ | --- | ------------------- |
 {%             set cipher = profile.cipher | arista.avd.default('-') %}
 {%             set key_server_priority = profile.mka.key_server_priority | arista.avd.default('-') %}
