--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/mac-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/mac-security.j2
@@ -36,7 +36,7 @@ mac security
 {%         endif %}
 {%         if profile.traffic_unprotected.action is arista.avd.defined %}
 {%             set traffic_unprotected_cli = "traffic unprotected " ~ profile.traffic_unprotected.action %}
-{%             if profile.traffic_unprotected.action is arista.avd.defined("allow") and profile.traffic_unprotected.allow_active_sak is arista.avd.defined(true) %}
+{%             if profile.traffic_unprotected.action == "allow" and profile.traffic_unprotected.allow_active_sak is arista.avd.defined(true) %}
 {%                 set traffic_unprotected_cli = traffic_unprotected_cli ~ " active-sak" %}
 {%             endif %}
       {{ traffic_unprotected_cli }}
